# queimadas

./: .gitignore  INDEX.md  OVERFITTING_ANALYSIS.md  PROGRESS.md  PYTORCH_CNN_SUMMARY.md  PYTORCH_USAGE_EXAMPLES.md  QUICK_START.md  README.md  README_PYTORCH_CNN.md  TENSORFLOW_VS_PYTORCH.md  data.dvc  main.ipynb  pyproject.toml
.dvc/: config
docs/: descobertas.md  features-dict.md
models/: best_cnn_fire_monthly.pt  best_cnn_model.pt  best_cnn_multiclass_model.pt
notebooks/: 0.1.0-eda-e-tratamento.ipynb  1.0.0-eda-e-tratamento.ipynb  pytorch_cnn_model.py  train_pytorch_cnn.py
scripts/: cramers.py  plotly.py  winsor.py
