[project]
name = "queimadas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251201",
    "pyarrow>=22.0.0",
    "ruff>=0.14.9",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
